@@ -42,12 +42,8 @@ main (int argc, char *argv[])
     }
 #endif
 
-  /* gcc 2.95.2 limits.h on solaris 2.5.1 incorrectly selects a 64-bit
-     LONG_MAX, leading to some integer overflow in ULONG_MAX and a spurious
-     __GMP_ULONG_MAX != ULONG_MAX.  Casting ULONG_MAX to unsigned long is a
-     workaround.  */
 #ifdef ULONG_MAX
-  if (__GMP_ULONG_MAX != (unsigned long) ULONG_MAX)
+  if (__GMP_ULONG_MAX != ULONG_MAX)
     {
       printf ("__GMP_ULONG_MAX incorrect\n");
       printf ("  __GMP_ULONG_MAX  %lu  0x%lX\n", __GMP_ULONG_MAX, __GMP_ULONG_MAX);
@@ -60,8 +56,8 @@ main (int argc, char *argv[])
   if (__GMP_USHRT_MAX != USHRT_MAX)
     {
       printf ("__GMP_USHRT_MAX incorrect\n");
-      printf ("  __GMP_USHRT_MAX  %hu  0x%hX\n", __GMP_USHRT_MAX, __GMP_USHRT_MAX);
-      printf ("  USHRT_MAX        %hu  0x%hX\n", USHRT_MAX, USHRT_MAX);
+      printf ("  __GMP_USHRT_MAX  %u  0x%X\n", __GMP_USHRT_MAX, __GMP_USHRT_MAX);
+      printf ("  USHRT_MAX        %u  0x%X\n", USHRT_MAX, USHRT_MAX);
       error = 1;
     }
 #endif
